# skill-radar

./: .gitignore  CONTRIBUTING.md  LICENSE  OPERATING_BRIEF.zh-CN.md  README.md  SKILL.md  pyproject.toml
agent_skill_radar/: __init__.py  cli.py  github.py  report.py  scoring.py
config/: queries.json
data/: 2026-05-25.json  2026-05-26.json  2026-05-27.json  2026-05-28.json  2026-05-29.json  2026-05-30.json  2026-05-31.json  2026-06-01.json  2026-06-02.json  2026-06-03.json  2026-06-04.json  2026-06-05.json  2026-06-06.json  2026-06-07.json  2026-06-08.json  2026-06-09.json  2026-06-10.json  2026-06-11.json  2026-06-12.json  2026-06-13.json  2026-06-14.json  2026-06-15.json  2026-06-16.json  2026-06-17.json  2026-06-18.json  2026-06-19.json  2026-06-20.json  2026-06-21.json  2026-06-22.json  2026-06-23.json  2026-06-24.json  2026-06-25.json  2026-06-26.json  2026-06-27.json  2026-06-28.json  2026-06-29.json  2026-06-30.json  2026-07-01.json  2026-07-02.json  2026-07-03.json  (+21 more)
docs/: launch-post.md
references/: operating-playbook.md  public-skill-repo-page-template.md  scoring.md
reports/: 2026-05-25.md  2026-05-26.md  2026-05-27.md  2026-05-28.md  2026-05-29.md  2026-05-30.md  2026-05-31.md  2026-06-01.md  2026-06-02.md  2026-06-03.md  2026-06-04.md  2026-06-05.md  2026-06-06.md  2026-06-07.md  2026-06-08.md  2026-06-09.md  2026-06-10.md  2026-06-11.md  2026-06-12.md  2026-06-13.md  2026-06-14.md  2026-06-15.md  2026-06-16.md  2026-06-17.md  2026-06-18.md  2026-06-19.md  2026-06-20.md  2026-06-21.md  2026-06-22.md  2026-06-23.md  2026-06-24.md  2026-06-25.md  (+29 more)
(+13 files in other folders)
